tests/test0147.ctr
‘SINGLE_LANGUAGE’.
✎ write: ‘aaa’, stop.
{ ↲↲. } run.
✎ write: ‘aaa’, stop.
